--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verelpatlanpage",
-  "homepage": "https://www.coreandrum.com/vereLPatlanPage",
+  "homepage": "https://coreandrum1.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
