--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "moment": "^2.29.4",
-    "react": "^18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.5",
-    "react-router-dom": "^6.14.1"
+    "moment": "2.30.1",
+    "react": "18.3.1",
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
+    "react-dom": "18.3.1",
+    "react-draggable": "4.4.6",
+    "react-router-dom": "6.23.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "gh-pages": "^5.0.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "7.13.0",
+    "@vitejs/plugin-react-swc": "3.7.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.7",
+    "gh-pages": "6.1.1",
+    "typescript": "5.4.5",
+    "vite": "5.3.1"
   }
 }
