--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "7.13.0",
     "@vitejs/plugin-react-swc": "3.7.0",
-    "eslint": "^8.56.0",
+    "eslint": "8.56.0",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.7",
     "gh-pages": "6.1.1",
